# blockv2

./: .gitmodules  Blockv2_Dokumentacja.md  Blockv2_Dokumentacja_tmp.html  Blockv2_Instrukcja_Gry.md  Blockv2_Instrukcja_Gry_tmp.html  CMakeLists.txt  README.md  blockv2_main.cpp  engine_pl.md  game.cpp  game.h  game_of_block.md  level_info.cpp  level_info.h  test.cpp
bots/: CMakeLists.txt  basic.cpp  basic.h  bedrock.cpp  bedrock.h  bot.cpp  bot.h  bots_include.h  bots_main.h  empty.cpp  empty.h  enemy.cpp  enemy.h  engine.cpp  engine.h  factory.cpp  factory.h  game_of_block.md  goal.cpp  goal.h  tp.cpp  tp.h  turn.cpp  turn.h
glfw_window/: CMakeLists.txt  button.cpp  button.h  load_bmp.cpp  window.cpp  window.h
google_tests/: CMakeLists.txt  transposition_class_tests.cpp
sfml_window/: CMakeLists.txt  button.h  context.h  main_menu.cpp  main_menu.h  text_box.cpp  text_box.h  text_button.cpp  text_button.h  window.cpp  window.h  window.md
sfml_window/context/: CMakeLists.txt  context.cpp  context.h  context_include.h  creator_input_panel.cpp  creator_input_panel.h  level_creator.cpp  level_creator.h  level_picker.cpp  level_picker.h  level_player.cpp  level_player.h  main_menu.cpp  main_menu.h  run_simulation.cpp  run_simulation.h
sfml_window/window_utility/: CMakeLists.txt  button.cpp  button.h  gui_color.cpp  gui_color.h  image_button.cpp  image_button.h  image_toggle_button.cpp  image_toggle_button.h  short_level_info.cpp  short_level_info.h  text_box.cpp  text_box.h  text_button.cpp  text_button.h  toggle_sprite_button.cpp  toggle_sprite_button.h  toggle_text_button.cpp  toggle_text_button.h
tests/: CMakeLists.txt  movement_direction.cpp  movement_direction_test.cpp  transposition_class_tests.cpp
utility/: CMakeLists.txt  README.md  coord.cpp  coord.h  gui_color.cpp  gui_color.h  movement_direction.cpp  movement_direction.h  rect.cpp  rect.h  transposition.cpp  transposition.h
