add_library(bot
        bot.h bot.cpp
        empty.h empty.cpp
        ../utility/coord.h
        ../utility/coord.cpp
        basic.cpp basic.h
        bedrock.cpp bedrock.h
        turn.cpp turn.h
        goal.cpp goal.h
        enemy.cpp enemy.h
        engine.cpp engine.h
        factory.cpp factory.h
        tp.cpp tp.h)